--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Cc-juamenvar-september</name>
+	<name>Cc_septiembre_elomordom</name>
 	<comment></comment>
 	<projects>
 	</projects>
